--- a/.travis.yml
+++ b/.travis.yml
@@ -31,13 +31,14 @@ env:
 matrix:
   include:
       # Spark 2.2+ will only be verified using JDK8
-    - env: MVN_FLAG='-Pspark-2.2-it -DskipTests'
+      # Thriftserver requires JDK8
+    - env: MVN_FLAG='-Pthriftserver -Pspark-2.2-it -DskipTests'
       jdk: oraclejdk8
-    - env: MVN_FLAG='-Pspark-2.2 -DskipITs'
+    - env: MVN_FLAG='-Pthriftserver -Pspark-2.2 -DskipITs'
       jdk: oraclejdk8
-    - env: MVN_FLAG='-Pspark-2.3-it -DskipTests'
+    - env: MVN_FLAG='-Pthriftserver -Pspark-2.3-it -DskipTests'
       jdk: oraclejdk8
-    - env: MVN_FLAG='-Pspark-2.3 -DskipITs'
+    - env: MVN_FLAG='-Pthriftserver -Pspark-2.3 -DskipITs'
       jdk: oraclejdk8
 
 
