[LIVY-500] Add beeline client for dev

--- a/pom.xml
+++ b/pom.xml
@@ -1027,6 +1027,7 @@
       <id>thriftserver</id>
       <modules>
         <module>thriftserver/server</module>
+        <module>thriftserver/client</module> 
       </modules>
     </profile>
 
