Break unit tests and ITs into separate jobs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,14 @@ language: scala
 
 matrix:
   include:
-  - name: "Spark 2.2 + ITs"
-    env: MVN_FLAG='-Pthriftserver'
-  - name: "Spark 2.3 + ITs"
-    env: MVN_FLAG='-Pthriftserver -Pspark-2.3'
+  - name: "Spark 2.2 Unit Tests"
+    env: MVN_FLAG='-Pthriftserver -DskipITs'
+  - name: "Spark 2.2 ITs"
+    env: MVN_FLAG='-Pthriftserver -DskipTests'
+  - name: "Spark 2.3 Unit Tests"
+    env: MVN_FLAG='-Pspark-2.3 -Pthriftserver -DskipITs'
+  - name: "Spark 2.3 ITs"
+    env: MVN_FLAG='-Pspark-2.3 -Pthriftserver -DskipTests'
 
 jdk:
   - oraclejdk8
