--- a/server/pom.xml
+++ b/server/pom.xml
@@ -114,6 +114,10 @@
           <groupId>javax.servlet</groupId>
           <artifactId>servlet-api</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>com.sun.jersey</groupId>
+          <artifactId>jersey-core</artifactId>
+        </exclusion>
       </exclusions>
       <scope>${hadoop.scope}</scope>
     </dependency>
