--- a/thriftserver/server/pom.xml
+++ b/thriftserver/server/pom.xml
@@ -91,6 +91,11 @@
       <artifactId>libthrift</artifactId>
       <version>${libthrift.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-common</artifactId>
+      <version>2.25.1</version>
+    </dependency>
 
     <!-- needed for compiling successfully when using JobContext -->
     <dependency>
