[LIVY-500] Add beeline client for dev
## What changes were proposed in this pull request?

The PR adds a new `thriftserver/client` module and a `beeline` script which are useful to have a client for the thriftserver during local testing. Both things are intended for dev usage only and are not shipped with the distribution.

## How was this patch tested?

manual test

Author: Marco Gaido <mgaido@hortonworks.com>

Closes #113 from mgaido91/LIVY-500.

--- a/pom.xml
+++ b/pom.xml
@@ -1023,6 +1023,7 @@
       <id>thriftserver</id>
       <modules>
         <module>thriftserver/server</module>
+        <module>thriftserver/client</module> 
       </modules>
     </profile>
 
