[LIVY-552][WIP] Add JWTFilter to validate incoming JWT tokens

--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,8 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
+    <nimbus-jwt.version>4.41.2</nimbus-jwt.version>
+
   </properties>
 
   <repositories>
