--- a/pom.xml
+++ b/pom.xml
@@ -1025,6 +1025,7 @@
         <module>thriftserver/server</module>
         <module>thriftserver/session</module>
         <module>thriftserver/client</module>
+        <module>thriftserver/integration-test</module>
       </modules>
     </profile>
 
