--- a/.travis.yml
+++ b/.travis.yml
@@ -50,23 +50,23 @@ cache:
     - $HOME/.m2
 
 before_install:
-  - sudo apt-get -y install python3-pip python-dev
-  - sudo apt-get -y install libkrb5-dev
-  - sudo apt-get -y remove python-setuptools
-  - sudo pip2 install --upgrade "pip < 10.0.0" "setuptools < 36"
-  - sudo python3 -m pip install --upgrade "pip < 10.0.0" "setuptools < 36"
-  - sudo pip2 install codecov cloudpickle
-  - sudo python3 -m pip install cloudpickle
+  - sudo apt-get -q -y install python3-pip python-dev
+  - sudo apt-get -q -y install libkrb5-dev
+  - sudo apt-get -q -y remove python-setuptools
+  - sudo pip2 -q install --upgrade "pip < 10.0.0" "setuptools < 36"
+  - sudo python3 -m pip -q install --upgrade "pip < 10.0.0" "setuptools < 36"
+  - sudo pip2 -q install codecov cloudpickle
+  - sudo python3 -m pip -q install cloudpickle
 
 install:
-  - mvn $MVN_FLAG install -Dskip -DskipTests -DskipITs -Dmaven.javadoc.skip=true -B -V
+  - mvn $MVN_FLAG install -Dskip -DskipTests -DskipITs -Dmaven.javadoc.skip=true -Dorg.slf4j.simpleLogger.defaultLogLevel=warn -B -V
 
 before_script:
-  - sudo pip2 install "requests >= 2.10.0" pytest flaky flake8 requests-kerberos
-  - sudo pip3 install "requests >= 2.10.0" pytest flaky requests-kerberos
+  - sudo pip2 -q install "requests >= 2.10.0" pytest flaky flake8 requests-kerberos
+  - sudo pip3 -q install "requests >= 2.10.0" pytest flaky requests-kerberos
 
 script:
-  - mvn $MVN_FLAG verify -e
+  - mvn $MVN_FLAG -Dorg.slf4j.simpleLogger.defaultLogLevel=warn verify -e
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
