[LIVY-557] Make Travis-CI logs less verbose
- Pass `-qq` to apt-get install (-qq assumes -y).

Task-url: https://issues.apache.org/jira/browse/LIVY-557

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,9 +50,9 @@ cache:
     - $HOME/.m2
 
 before_install:
-  - sudo apt-get -q -y install python3-pip python-dev
-  - sudo apt-get -q -y install libkrb5-dev
-  - sudo apt-get -q -y remove python-setuptools
+  - sudo apt-get -qq install python3-pip python-dev
+  - sudo apt-get -qq install libkrb5-dev
+  - sudo apt-get -qq remove python-setuptools
   - sudo pip2 -q install --upgrade "pip < 10.0.0" "setuptools < 36"
   - sudo python3 -m pip -q install --upgrade "pip < 10.0.0" "setuptools < 36"
   - sudo pip2 -q install codecov cloudpickle
