[LIVY-557] Make Travis-CI logs less verbose
Mark `MAVEN_OPTS` as a global env variable.

Task-url: https://issues.apache.org/jira/browse/LIVY-557

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ language: scala
   - 2.11.12
 
 env:
-  -MAVEN_OPTS=-Dorg.slf4j.simpleLogger.defaultLogLevel=warn
+  global:
+  - MAVEN_OPTS = "-Dorg.slf4j.simpleLogger.defaultLogLevel=warn"
 
 matrix:
   include:
