[LIVY-557] Make Travis-CI logs less verbose
Wrap `MAVEN_OPTS` in single quotes.

Task-url: https://issues.apache.org/jira/browse/LIVY-557

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ language: scala
 
 env:
   global:
-  - MAVEN_OPTS = "-Dorg.slf4j.simpleLogger.defaultLogLevel=warn"
+  - MAVEN_OPTS='-Dorg.slf4j.simpleLogger.defaultLogLevel=warn'
 
 matrix:
   include:
