--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,6 @@ dist: trusty
 language: scala
   - 2.11.12
 
-env:
-  global:
-  - MAVEN_OPTS='-Dorg.slf4j.simpleLogger.defaultLogLevel=warn'
-
 matrix:
   include:
   - name: "Spark 2.2 Unit Tests"
@@ -62,6 +58,7 @@ before_install:
   - sudo python3 -m pip -q install --upgrade "pip < 10.0.0" "setuptools < 36"
   - sudo pip2 -q install codecov cloudpickle
   - sudo python3 -m pip -q install cloudpickle
+  - export MAVEN_OPTS=-Dorg.slf4j.simpleLogger.defaultLogLevel=warn
 
 install:
   - mvn $MVN_FLAG install -Dskip -DskipTests -DskipITs -Dmaven.javadoc.skip=true -B -V
