[LIVY-557] Make Travis-CI logs less verbose
- enable pip and /m2 cache.

Task-url: https://issues.apache.org/jira/browse/LIVY-557

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,10 +38,10 @@ matrix:
 jdk:
   - oraclejdk8
 
-# cache:
-#   pip: true
-#  directories:
-#    - $HOME/.m2
+cache:
+  pip: true
+  directories:
+    - $HOME/.m2
 
 install:
   - sudo apt-get -qq install r-base
