--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,11 @@ matrix:
   - name: "Spark 2.3 Unit Tests"
     env: MVN_FLAG='-Pspark-2.3 -Pthriftserver -DskipITs'
   - name: "Spark 2.3 ITs"
-    env: MVN_FLAG='-Pspark-2.3 -Pspark-2.3-it -Pthriftserver -DskipTests'
+    env: MVN_FLAG='-Pspark-2.3 -Pthriftserver -DskipTests'
   - name: "Spark 2.4 Unit Tests"
     env: MVN_FLAG='-Pspark-2.4 -Pthriftserver -DskipITs'
   - name: "Spark 2.4 ITs"
-    env: MVN_FLAG='-Pspark-2.4 -Pspark-2.4-it -Pthriftserver -DskipTests'
+    env: MVN_FLAG='-Pspark-2.4 -Pthriftserver -DskipTests'
 
 jdk:
   - oraclejdk8
