Set older guava version for integration-tests for compatibility with hadoop
Change-Id: I86718e3806c41c1d7ec9e55c59aa65a08b18c36b

--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -39,6 +39,7 @@
     <cluster.spec>default</cluster.spec>
     <skipDeploy>true</skipDeploy>
     <livy.test.thrift.enabled>false</livy.test.thrift.enabled>
+    <guava.version>15.0</guava.version>
   </properties>
 
   <dependencies>
