LIVY-615: Validate livy.ui.basePath property
The default value of livy.ui.basePath has been changed from empty string
to "/" instead. As the property was not working before this should be
a safe change. Nonetheless, if empty string is used for this property
things will still work as expected. Any value that does not start with
a slash will fail however.

Changes have also been made to make things pass the scala style check.

--- a/conf/livy.conf.template
+++ b/conf/livy.conf.template
@@ -36,7 +36,7 @@
 
 # What base path ui should work on. By default UI is mounted on "/".
 # E.g.: livy.ui.basePath = /my_livy - result in mounting UI on /my_livy/
-# livy.ui.basePath = ""
+# livy.ui.basePath = /
 
 # What spark master Livy sessions should use.
 # livy.spark.master = local
