--- a/client-http/pom.xml
+++ b/client-http/pom.xml
@@ -78,6 +78,11 @@
       <artifactId>httpmime</artifactId>
       <version>4.5.1</version>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.livy</groupId>
