exclude log4j2 dependency

--- a/thriftserver/server/pom.xml
+++ b/thriftserver/server/pom.xml
@@ -69,6 +69,10 @@
           <groupId>org.eclipse.jetty</groupId>
           <artifactId>*</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
 
