--- a/rsc/pom.xml
+++ b/rsc/pom.xml
@@ -53,6 +53,8 @@
       <groupId>org.apache.livy</groupId>
       <artifactId>livy-core_${scala.binary.version}</artifactId>
       <version>${project.version}</version>
+      <!-- Or it will conflict with repl jars -->
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
