--- a/client-common/pom.xml
+++ b/client-common/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.livy</groupId>
     <artifactId>livy-main</artifactId>
-    <version>0.8.0-incubating-SNAPSHOT</version>
+    <version>${revision}</version>
   </parent>
 
   <groupId>org.apache.livy</groupId>
