--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -23,13 +23,11 @@
   <parent>
     <groupId>org.apache.livy</groupId>
     <artifactId>livy-main</artifactId>
-    <version>0.8.0-incubating-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <version>${revision}</version>
   </parent>
 
   <groupId>org.apache.livy</groupId>
   <artifactId>livy-examples</artifactId>
-  <version>0.8.0-incubating-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
