--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -22,12 +22,10 @@
   <parent>
     <groupId>org.apache.livy</groupId>
     <artifactId>livy-main</artifactId>
-    <relativePath>../pom.xml</relativePath>
-    <version>0.8.0-incubating-SNAPSHOT</version>
+    <version>${revision}</version>
   </parent>
 
   <artifactId>livy-integration-test</artifactId>
-  <version>0.8.0-incubating-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
