--- a/scala-api/pom.xml
+++ b/scala-api/pom.xml
@@ -23,12 +23,11 @@
   <parent>
     <groupId>org.apache.livy</groupId>
     <artifactId>multi-scala-project-root</artifactId>
-    <version>0.8.0-incubating-SNAPSHOT</version>
+    <version>${revision}</version>
     <relativePath>../scala/pom.xml</relativePath>
   </parent>
 
   <artifactId>livy-scala-api-parent</artifactId>
-  <version>0.8.0-incubating-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <dependencies>
