Installing pip deps for build

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,21 @@ language: scala
 matrix:
   include:
   - name: "Spark 2.4 Unit Tests"
-    env: MVN_FLAG='-Pthriftserver -DskipITs'
+    env:
+      - MVN_FLAG='-Pthriftserver -DskipITs'
+      - PIP_FILES='pyspark=2.4.5'
   - name: "Spark 2.4 ITs"
-    env: MVN_FLAG='-Pthriftserver -DskipTests'
+    env:
+      - MVN_FLAG='-Pthriftserver -DskipTests'
+      - PIP_FILES='pyspark=2.4.5'
   - name: "Spark 3.0 Unit Tests"
-    env: MVN_FLAG='-Pthriftserver -Pspark-3.0 -DskipITs'
+    env:
+      - MVN_FLAG='-Pthriftserver -Pspark-3.0 -DskipITs'
+      - PIP_FILES='pyspark=3.0.0'
   - name: "Spark 3.0 ITs"
-    env: MVN_FLAG='-Pthriftserver -Pspark-3.0 -DskipTests'
+    env:
+      - MVN_FLAG='-Pthriftserver -Pspark-3.0 -DskipTests'
+      - PIP_FILES='pyspark=3.0.0'
 
 jdk:
   - openjdk8
@@ -50,8 +58,8 @@ install:
   - sudo python3 -m pip -q install --upgrade "pip < 10.0.0" "setuptools < 36"
   - sudo pip2 -q install codecov cloudpickle
   - sudo python3 -m pip -q install cloudpickle
-  - sudo pip2 -q install "requests >= 2.10.0" pytest flaky flake8 requests-kerberos
-  - sudo pip3 -q install "requests >= 2.10.0" pytest flaky requests-kerberos
+  - sudo pip2 -q install "requests >= 2.10.0" pytest flaky flake8 requests-kerberos $PIP_FILES
+  - sudo pip3 -q install "requests >= 2.10.0" pytest flaky requests-kerberos $PIP_FILES
 
 script:
   - mvn $MVN_FLAG -Dmaven.javadoc.skip=true -B -V -e verify
