add livy.server.audit-log.enabled configuration option

--- a/conf/livy.conf.template
+++ b/conf/livy.conf.template
@@ -154,6 +154,9 @@
 # Days to keep Livy server request logs.
 # livy.server.request-log-retain.days = 5
 
+# Whether to enable audit log of statements submitted to Livy server
+# livy.server.audit-log.enabled = false
+
 # If the Livy Web UI should be included in the Livy Server. Enabled by default.
 # livy.ui.enabled = true
 
